--- a/blueprints/templates/user_game_room.html
+++ b/blueprints/templates/user_game_room.html
@@ -1,22 +1,38 @@
 {%extends 'base_user.html'%}
 {% block main_content%}
 <div>
-    <div>
-    {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        <ul class=flashes>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-            {% endif %}
-            {% endwith %}
-        </ul>
-    </div>
-        <div class=" col-12 justify-content-center" style="overflow:auto;overflow-y:auto;">
-            {% if errors %}
-                {{errors}}
-            {% endif %}
-            {{user.count}}
+    <div class="col">
+        <div class="row">
+            <div class="col-3" style="height: 30px;">
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                <div class="bg-dark text-white" style="height: 30px;">
+                    <ul class="flashes">
+                        {% for message in messages %}
+                        <center>
+                            <li>{{ message }}</li>
+                        </center>
+
+                        {% endfor %}
+                        {% endif %}
+                        {% endwith %}
+                    </ul>
+                </div>
+                <div class="col-5  bg-dark text-white" style="height: 30px;">
+                    <center><p>Количество выстрелов: {{user.count}}</p></center>
+                </div>
+                <div class="col-4">
+                    {% if errors %}
+                    <center>
+                        <div class="bg-danger text-white" style="height: 30px;"> {{errors}}</div>
+                    </center>
+                    {% endif %}
+                </div>
+            </div>
+
+
+        </div>
+        <center>
             <table class="table table-bordered border-dark bg-light my-4" style="width:calc(35px*({{size+1}} + 1));">
                 <thead>
                 <tr>
@@ -32,25 +48,28 @@
                     <th style="width: 41.8px; height: 38px;  background: #e8ecef;">{{ y+1 }}</th>
                     {% for x in range(size) %}
                     <td style="background: #e8ecef;">
-                         {% if board_render[y][x] == "x" %}
+                        {% if board_render[y][x] == "x" %}
                         <button class="btn contant_shoots" style="width: 35px; height: 35px;"
-                                data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" >
+                                data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}">
                         </button>
                         {% elif board_render[y][x] == "!" %}
                         <button class="btn contant_shot_down" style="width: 35px; height: 35px;"
-                                data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}" >
+                                data-positionx="{{ x }}" data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}">
                         </button>
                         {% else %}
-                         <a class="btn" style="width: 35px; height: 35px;  background: #e8ecef;" data-positionx="{{ x }}"
-                                data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}"  href = "{{url_for('api.shoot',x = x, y = y,board_id =user.board_id)}}">
-                        <a>
-                        {%endif%}
+                        <a class="btn" style="width: 35px; height: 35px;  background: #e8ecef;" data-positionx="{{ x }}"
+                           data-positiony="{{ y }}" id="{{ x+1 }}{{ y }}"
+                           href="{{url_for('api.shoot',x = x, y = y,board_id =user.board_id)}}">
+                            <a>
+                                {%endif%}
                     </td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
                 </tbody>
-        </div>
+    </div>
+    </center>
+</div>
 </div>
 <style>
 .contant_shoots{
@@ -71,5 +90,18 @@
     border-color: rgba(255, 0, 0, 255);
 	border-width: 4px;
 	}
+
+
+
+
+
+
+
+
+
+
+
+
+
 </style>
 {% endblock %}
