--- a/blueprints/templates/admin_game_room.html
+++ b/blueprints/templates/admin_game_room.html
@@ -192,6 +192,7 @@
   .contant{
   background: url(https://sergeychikin.ru/365/150-clothes/sneakers.svg);
   background: url(https://sergeychikin.ru/365/028-transport/sea/steamboat.svg);
+  background: url(https://sergeychikin.ru/365/140-food/drink/beer2.svg);
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
