--- a/blueprints/templates/admin.html
+++ b/blueprints/templates/admin.html
@@ -3,7 +3,7 @@
 {%block main_content%}
 <div class="py-5 text-center">
     <h1>Начните играть !</h1>
-    <p class="lead mb-5"> Чтобы приступить к игре вам нужно получить приглашение в лобби от админа</p>
+    <p class="lead mb-5"> Создайте игру</p>
     <a class="btn btn-outline-light btn-lg btn-lg mt-5 px-5" href="{{ url_for('board.add_board') }}">Создать игру</a>
 </div>
 {%endblock%}
