--- a/blueprints/templates/prizes.html
+++ b/blueprints/templates/prizes.html
@@ -24,8 +24,11 @@
     <h1>Ваши призы</h1>
     <div class="row justify-content-center justify-content-md-start justify-content-lg-center
     text-white mt-5">
+    <button onclick="getMassive()" id="filter"  data-massive="{{prizes}}">
+        KNOPKA
+    </button> 
+    <div id="sortmassive"></div>  
         {% for prize in prizes%}
-        <button onclick="getMassive()" id="filter" data-massive="{{prizes}}">
         <div class=" col-9 col-md-5 col-lg-3 mx-4 mt-3">
             <div class="galery">
                 <div class="card flex-fill bg-dark align-items-center">
@@ -43,7 +46,6 @@
                 </div>
             </div>
         </div>
-    </button>
         {%endfor%}
         </ul>
     </div>
@@ -68,14 +70,10 @@
     {%endif%}
 {%endif%}
 
-{%endblock%}<srcript>
-    function getMassive(){
-        var button = getElementById('filter')
-        var massive = button.getAttribute('data-massive')
-        console.log(massive)
-    }
-
-    function filter(mass){
-
-    }
+<srcript>
+    document.addEventListener("BimBim", function(){
+        var button
+    })
 </srcript>
+
+{%endblock%}
