--- a/blueprints/templates/index.html
+++ b/blueprints/templates/index.html
@@ -39,8 +39,8 @@
     </header>
 
     <main role="main" class="inner cover mt-5 justify-content-center">
-        <h1 class="cover-heading">Йоу boy это морской бой</h1>
-        <p class="lead">ММОРПГ многопользовательская игра из 2-ух человек убей все корабли противника)))</p>
+        <h1 class="cover-heading">Веб-игра морской бой</h1>
+        <p class="lead">Здесь пока нет информации, но скоро её будет больше</p>
         <p class="lead">
             <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
         </p>
