--- a/blueprints/templates/board_list.html
+++ b/blueprints/templates/board_list.html
@@ -8,10 +8,13 @@
 
 {%block main_content%}
 <div class="justify-content-center text-center">
-  <div class = "row justify-content-center text-white ">
+  <div class = "row justify-content-center ">
     <h2 class="mb-5 text-dark">Ваши игровые поля</h2>
+    {%if not boards%}
+    <p>Нет еще не одного игрового поля</p>
+    {%else%}
       {% for board in boards %}
-        <div class="col-12 col-md-6 col-lg-4 text-center mb-3">
+        <div class="col-12 col-md-6 col-lg-4 text-center mb-3 text-white">
           <div class="card bg-dark" style="border-radius: 1rem;">
             <div class="card-body">
               <p class="card-text  text-white">Номер id:{{ board.id }}</p>
@@ -31,6 +34,7 @@
           </div>
         </div>
       {% endfor %}
+    {%endif%}
 
   </div>
    {% if current_user.is_admin%}
