--- a/blueprints/templates/prizes.html
+++ b/blueprints/templates/prizes.html
@@ -24,7 +24,7 @@
         <div class="row justify-content-center justify-content-md-start justify-content-lg-center
         text-white mt-5">
         <button onclick="getMassive()" id="filter"  data-massive="{{prizes}}">
-            KNOPKA
+            ФИЛЬТРАЦИЯ ПО ИМЕНИ
         </button> 
         <script>
             function getMassive(){
