--- a/blueprints/templates/admin_game_room.html
+++ b/blueprints/templates/admin_game_room.html
@@ -168,7 +168,7 @@
                                 <div class = "card-body">
                                 <p>Имя пользователя : {{usr.login}}</p>
                                 <p>Кол-во выстрелов : {{user.count}}</p>
-                                <a class = "btn" href = "{{url_for('admin.add_shoot',board_id = board_id,user_id = usr.id,shoots_count = 1)}}">Начислить выстрелы</a>
+                                <a class = "btn btn-outline-light btn-sm px-5" href = "{{url_for('admin.add_shoot',board_id = board_id,user_id = usr.id,shoots_count = 1)}}">Начислить выстрелы</a>
 
                                 </div>
                             </div>
