--- a/blueprints/templates/prizes.html
+++ b/blueprints/templates/prizes.html
@@ -23,7 +23,7 @@
         
         <div class="row justify-content-center justify-content-md-start justify-content-lg-center
         text-white mt-5">
-        <button onclick="getMassive()" id="filter"  data-massive="{{prizes}}">
+        <button class="btn text-start" onclick="getMassive()" id="filter"  data-massive="{{prizes}}">
             KNOPKA
         </button> 
         <script>
