--- a/blueprints/templates/index.html
+++ b/blueprints/templates/index.html
@@ -40,10 +40,32 @@
 
     <main role="main" class="inner cover mt-5 justify-content-center">
         <h1 class="cover-heading">Веб-игра морской бой</h1>
-        <p class="lead">Здесь пока нет информации, но скоро её будет больше</p>
-        <p class="lead">
-            <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
-        </p>
+        <p class="lead">Здесь пока нет информации , но скоро ее будет больше</p>
+        <p class="lead"></p>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Правила игры</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body">
+                <br>1. Завести почтовый ящик на https://www.jabber.ru/
+                <br>2. Скачать conversations.im https://conversations.im/ и зарегистрироваться там
+                <br>3. Ввести в форму регистрации (xmmp адресс) свою почту , прикрепленную к аккаутну на conversations.im
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Закрыть
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
     </main>
 </div>
 </body>
