super gradient commit

--- a/blueprints/templates/add_prize.html
+++ b/blueprints/templates/add_prize.html
@@ -3,7 +3,7 @@
 <div class="row d-flex justify-content-center align-items-center h-100">
     <div class="col-12 col-md-8 col-lg-7 col-sm-7 bg-dark " style="border-radius: 1rem;">
         <div class="card bg-dark text-white" >
-            <h1 class="text-center text-white mb-3 mb-lg-5" >Добавьте приз</h1>
+            <h1 class="text-center text-white mb-3 mb-lg-5 my-3" >Добавьте приз</h1>
                {% if form.errors%}
                     <div class="alert alert-danger" role="alert">
                         <!--                                    #Обращаемся к ошибкам form(RegisterForm), достаем по ключу ошибки(название колонки) первый элемент-->
