--- a/blueprints/templates/login.html
+++ b/blueprints/templates/login.html
@@ -63,4 +63,9 @@
     </div>
 </section>
 </body>
+<style>
+    body {
+	background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
+}
+</style>
 </html>
