--- a/blueprints/templates/register.html
+++ b/blueprints/templates/register.html
@@ -71,5 +71,10 @@
         </div>
     </div>
 </section>
+<style>
+    body {
+	background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
+}
+</style>
 </body>
 </html>
