--- a/blueprints/templates/base_admin.html
+++ b/blueprints/templates/base_admin.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ru">
   <head>
@@ -10,7 +9,7 @@
     </style>
     <title>Привет мир!</title>
   </head>
-  <body class="h-100 " style = " background: linear-gradient(to right, #30d5c8, #0000E6);">
+  <body class="h-100 ">
 <div class='cover-container w-100 d-flex px-0 flex-column '>
     <header class="mb-5">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-auto">
@@ -55,6 +54,9 @@
     a{
         text-decoration : none;
     }
+    body {
+	background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
+}
 </style>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
