--- a/blueprints/templates/base_user.html
+++ b/blueprints/templates/base_user.html
@@ -55,6 +55,9 @@
     a{
         text-decoration : none;
     }
+    body{
+    background: linear-gradient(90deg, #cfecd0, #a0cea7, #9ec0db);
+}
 </style>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
