--- a/blueprints/templates/admin.html
+++ b/blueprints/templates/admin.html
@@ -4,6 +4,6 @@
 <div class="py-5 text-center">
     <h1>Начните играть !</h1>
     <p class="lead mb-5"> Создайте игру</p>
-    <a class="btn btn-outline-light btn-lg btn-lg mt-5 px-5" href="{{ url_for('board.add_board') }}">Создать игру</a>
+    <a class="btn btn-outline-light btn-lg btn-lg mt-5 px-5 text-dark" href="{{ url_for('board.add_board') }}">Создать игру</a>
 </div>
 {%endblock%}
