--- a/blueprints/templates/user_game_room.html
+++ b/blueprints/templates/user_game_room.html
@@ -52,9 +52,8 @@
                                 потратить
                                 на поле
                                 морского боя.
-                                <br>3. Игровое поле представляет собой квадратную сетку, на которой расставлены корабли
-                                противника.
-                                <br>4. Каждый корабль имеет свой уникальный приз.
+                                <br>3. Игровое поле представляет собой квадратную сетку, на которой расставлены корабли.
+                                <br>4. Каждый корабль имеет свой приз.
                                 <br>5. Игроки могут совершать выстрелы по кораблям, нажимая на клетки игрового поля.
                                 <br>6. Если игрок попадает в корабль, он получает приз, который был назначен за этим
                                 кораблем.
